istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: digg-arbetsprov-prod
spec:
  selector:
    istio: ingressgateway  
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
