istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: digg-arbetsprov-prod
spec:
  hosts:
    - "*"  
  gateways:
    - app-gateway  
  http:
    - match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: your-new-app-service  
            port:
              number: 8080  
    - route:
        - destination:
            host: arbetsprov-app  
            port:
              number: 8080
